[workspace]
members = ["libs/*", "plugins/*"]
default-members = ["plugins/*"]
resolver = "3"

[workspace.dependencies]
windows = { version = "0.61" }
widestring = { version = "1.2" }
ini = { version = "1.3" }
rust-ini = { version = "0.21" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
