[workspace]
members = ["libs/*", "plugins/*"]
default-members = ["plugins/*"]
resolver = "3"

[workspace.dependencies]
windows = { version = "0.61" }
widestring = { version = "1.2" }
rust-ini = { version = "0.21" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
