[package]
name = "apng_export"
version = "0.0.0"
edition = "2024"

[lib]
name = "apng_export"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../aviutl" }
dialog = { path = "../dialog" }
png = { version = "0.17" }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
