[package]
name = "gif_export"
version = "0.0.0"
edition = "2024"

[lib]
name = "gif_export"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../aviutl" }
dialog = { path = "../dialog" }
gif = { version = "0.13" }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
