[package]
name = "win32_dialog"
version = "0.0.0"
edition = "2024"

[dependencies]
taffy = { version = "0.8.3", default-features = false, features = [
  "taffy_tree",
  "flexbox",
  "std",
] }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
] }
