[package]
name = "apng_export"
version = "0.0.0"
edition = "2024"

[lib]
name = "apng_export"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../../libs/aviutl" }
dialog = { path = "../../libs/dialog" }
png = { version = "0.17" }
rust-ini = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
