[package]
name = "apng_output"
version = "0.0.0"
edition = "2024"

[lib]
name = "apng_output"
crate-type = ["cdylib"]

[features]
rgba = []

[dependencies]
aviutl = { path = "../../libs/aviutl" }
dialog = { path = "../../libs/dialog" }
palette = { version = "0.7" }
png = { version = "0.17" }
rust-ini = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
