[package]
name = "png_output"
version = "1.1.2"
edition = "2024"

[lib]
name = "png_output"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../../libs/aviutl" }
win32_dialog = { path = "../../libs/dialog" }
png = { version = "0.17" }
rust-ini = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
