[package]
name = "avif_output"
version = "1.1.0"
edition = "2024"

[lib]
name = "avif_output"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../../libs/aviutl" }
win32_dialog = { path = "../../libs/dialog" }
rustavif = { git = "https://github.com/yu7400ki/rustavif", rev = "df26b9d", default-features = false, features = [
  "codec-aom",
] }
rust-ini = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
