[package]
name = "avif_output"
version = "1.1.3"
edition = "2024"

[lib]
name = "avif_output"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../../libs/aviutl" }
win32_dialog = { path = "../../libs/dialog" }
rustavif = { git = "https://github.com/yu7400ki/rustavif", rev = "d7e326a", default-features = false, features = [
  "codec-aom",
] }
rust-ini = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
