[package]
name = "gif_output"
version = "0.0.0"
edition = "2024"

[lib]
name = "gif_output"
crate-type = ["cdylib"]

[features]
rgba = []

[dependencies]
aviutl = { path = "../../libs/aviutl" }
dialog = { path = "../../libs/dialog" }
gif = { version = "0.13" }
rust-ini = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
