[package]
name = "webp_export"
version = "0.0.0"
edition = "2024"

[lib]
name = "webp_export"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../../libs/aviutl" }
dialog = { path = "../../libs/dialog" }
rust-ini = { workspace = true }
libwebp-sys = { version = "0.12" }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
