[package]
name = "webp_output"
version = "1.1.0"
edition = "2024"

[lib]
name = "webp_output"
crate-type = ["cdylib"]

[dependencies]
aviutl = { path = "../../libs/aviutl" }
win32_dialog = { path = "../../libs/dialog" }
rust-ini = { workspace = true }
libwebp-sys = { version = "0.12" }
widestring = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
